--- a/cv_james-arabe.html
+++ b/cv_james-arabe.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<style>
 	
+	
 	body {
 	display: flex;
 	flex-direction: column;
@@ -74,6 +75,7 @@
 	</head>
 
 	<body>
+		<p><a href="https://resumefrancisjames.github.io/resumeFRANCISJames/">الصفحة الرئيسية</a></p>
         <div class="section-title">
             <img class="image" src="https://raw.githubusercontent.com/resumefrancisJames/resumeFRANCISJames/main/James.jpeg">
             <div class="head-title">
