--- a/cv_james-française.html
+++ b/cv_james-française.html
@@ -3,6 +3,7 @@
 	<meta charset="utf-8">
 	<style>
 	
+	
 	body {
 	display: flex;
 	flex-direction: column;
@@ -74,6 +75,8 @@
 	</head>
 
 	<body>
+		<p><a href="https://resumefrancisjames.github.io/resumeFRANCISJames/">Page d'accueil</a></p>
+		
 		 <div class="section-title">
             <img class="image" src="https://raw.githubusercontent.com/resumefrancisJames/resumeFRANCISJames/main/James.jpeg">
             <div class="head-title">
