--- a/cv_james-Anglais.html
+++ b/cv_james-Anglais.html
@@ -75,7 +75,7 @@
 	</head>
 
 	<body>
-        <p><a href="https://resumefrancisjames.github.io/resumeFRANCISJames/">Home page</a></p>
+        <p><a href="http://www.francisjames.fr/resources.html">Home page</a></p>
         <div class="section-title">
             <img class="image" src="https://raw.githubusercontent.com/resumefrancisJames/resumeFRANCISJames/main/James.jpeg">
             <div class="head-title">
