--- a/cv_james-arabe.html
+++ b/cv_james-arabe.html
@@ -75,7 +75,7 @@
 	</head>
 
 	<body>
-		<p><a href="https://resumefrancisjames.github.io/resumeFRANCISJames/">الصفحة الرئيسية</a></p>
+		<p><a href="http://www.francisjames.fr/resources.html">الصفحة الرئيسية</a></p>
         <div class="section-title">
             <img class="image" src="https://raw.githubusercontent.com/resumefrancisJames/resumeFRANCISJames/main/James.jpeg">
             <div class="head-title">
