--- a/cv_james-française.html
+++ b/cv_james-française.html
@@ -75,7 +75,7 @@
 	</head>
 
 	<body>
-		<p><a href="https://resumefrancisjames.github.io/resumeFRANCISJames/">Page d'accueil</a></p>
+		<p><a href="http://www.francisjames.fr/resources.html">Page d'accueil</a></p>
 		
 		 <div class="section-title">
             <img class="image" src="https://raw.githubusercontent.com/resumefrancisJames/resumeFRANCISJames/main/James.jpeg">
